Feat: Add unit testing for begin journey and logo

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest run",
+    "test": "vitest",
     "test:watch": "vitest"
   },
   "dependencies": {
